fixed hero image and text alignment

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -37,6 +37,7 @@
     font-size: 30px;
     font-family: var(--font-roboto);
     margin-bottom: 52px;
+    width: 70%;
 }
 
 .contactBtn {
@@ -51,7 +52,8 @@
 }
 
 .heroImg {
-    width: 50%;
+    width: 40%;
+    ;
     z-index: 1;
 
     animation-name: floating;
